--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
     	<div class="row">
     		<div class="col-lg">
 		      <div class="header-content fade-in">
-		        <div class="header-title">Impulsando el<br>pensamiento disruptivo.</div>
+		        <div class="header-title">En el alma, en tu alma, se encuentran recursos para el mundo.</div>
 		        <div class="header-subtitle">
+					Hub creativo y red de cooperación.
+					<br>
 		        	Transformamos negocios y territorios hacia el futuro y la sostenibilidad.
 		    	</div>
 		      </div>
@@ -59,19 +61,19 @@
 	<main>
 		<section class="container mt-8 mb-8">
 			<div class="row">
-				<div class="col-sm-4 m-auto text-center">
+				<div class="col-sm-4 m-auto text-center pb-5">
+					<img class="intern-logos" src="static/img/area_abur.png">
+				</div>
+				<div class="col-sm-4 m-auto text-center pb-5" style="width: 190px;">
 					<img class="intern-logos" src="static/img/oea_logo.png">
 				</div>
-				<div class="col-sm-4 m-auto text-center">
-					<img class="intern-logos" src="static/img/onu_logo.png">
-				</div>
-				<div class="col-sm-4 m-auto text-center">
-					<img class="intern-logos" src="static/img/area_abur.png">
+				<div class="col-sm-4 m-auto text-center pb-5">
+					<img class="intern-logos" style="width: 220px;" src="static/img/onu.jpg">
 				</div>
 			</div>
 		</section>
-		<section class="mt-8 mb-8">
-			<div class="header-caption container">
+		<section class="mt-8 mb-8 container">
+			<div class="header-caption">
 				<div class="row">
 					<div class="col-lg-6 pl-5 pr-5">
 						<video controls style="width: 100%;">
@@ -85,10 +87,58 @@
 								¡Pensamos por tí!
 							</div>
 							<div class="header-subtitle">
-								Un tanque de pensamiento que da vida a la<br>solución que necesitas.
+								Somos una organización estratégica, compuesta de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento local y gloal llegue a manos de quienes lo necesitan.
 							</div>
 							<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Descubre YA qué podemos hacer por tí</a>
 						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="container margin-8 mb-8 mt-8">
+			<div class="row">
+				<div class="col-sm-3 text-center pb-5">
+					<img class="thinker m-auto" src="static/img/thinker_1.jpg" alt="">
+					<div class="content-text mt-3">
+						ALBERT GARCIA
+					</div>
+					<div class="about-card-text">
+						Presidente de la junta de negocios de Wynwood Walls
+						<br>
+						Miami
+					</div>
+				</div>
+				<div class="col-sm-3 text-center pb-5">
+					<img class="thinker m-auto" src="static/img/thinker_2.jpg" alt="">
+					<div class="content-text mt-3">
+						GUILLERMO GIL
+					</div>
+					<div class="about-card-text">
+						Coordinador del Clúster de Conocimiento en Tecnologías de la Información y de la Comunicación.
+						<br>
+						Madrid
+					</div>
+				</div>
+				<div class="col-sm-3 text-center pb-5">
+					<img class="thinker m-auto" src="static/img/thinker_3.jpg" alt="">
+					<div class="content-text mt-3">
+						ANA CARLA FONSECA REIZ
+					</div>
+					<div class="about-card-text">
+						Administradora Pública por la Fundação Getulio Vargas/FGV.
+						<br>
+						Rio de Janeiro
+					</div>
+				</div>
+				<div class="col-sm-3 text-center pb-5">
+					<img class="thinker m-auto" src="static/img/thinker_4.jpg" alt="">
+					<div class="content-text mt-3">
+						CARLOS GOMEZ
+					</div>
+					<div class="about-card-text">
+						Reconocido Politologo, economista, orador y experto en territorio, gobierno y sostenbilidad.
+						<br>
+						Monterrey
 					</div>
 				</div>
 			</div>
@@ -341,6 +391,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="bb903c5a-eeff-49b7-8222-713f26bb7937";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 	<script src="static/js/main.js"></script>
 </body>
 </html>
