--- a/manifiesto.html
+++ b/manifiesto.html
@@ -40,7 +40,7 @@
 		</div>
 	</nav>
 	<header style="height: 20vh !important;"></header>
-	<main class="container">
+	<main class="container" style="max-width: 900px;">
 		<section class="manifesto mb-5">
 			<div class="w-100 text-right mb-5">
 				<img src="static/img/rocket_man.svg" style="width: 20%;">
