--- a/index.html
+++ b/index.html
@@ -60,15 +60,26 @@
 	</header>
 	<main>
 		<section class="container mt-8 mb-8">
-			<div class="row">
-				<div class="col-sm-4 m-auto text-center pb-5">
-					<img class="intern-logos" src="static/img/area_abur.png">
+			<div class="row no-mobile">
+				<div class="col-sm-4 m-auto text-right pb-5">
+					<img class="intern-logos" style="width: 150px;" src="static/img/area_abur.png">
 				</div>
-				<div class="col-sm-4 m-auto text-center pb-5" style="width: 190px;">
+				<div class="col-sm-4 m-auto text-center pb-5">
+					<img class="intern-logos" src="static/img/oea_logo.png">
+				</div>
+				<div class="col-sm-4 m-auto text-left pb-5">
+					<img class="intern-logos" src="static/img/onu.jpg">
+				</div>
+			</div>
+			<div class="row mobile">
+				<div class="col-sm-4 m-auto text-center pb-5">
+					<img class="intern-logos" style="width: 150px;" src="static/img/area_abur.png">
+				</div>
+				<div class="col-sm-4 m-auto text-center pb-5">
 					<img class="intern-logos" src="static/img/oea_logo.png">
 				</div>
 				<div class="col-sm-4 m-auto text-center pb-5">
-					<img class="intern-logos" style="width: 220px;" src="static/img/onu.jpg">
+					<img class="intern-logos" src="static/img/onu.jpg">
 				</div>
 			</div>
 		</section>
