--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								¡Pensamos por tí!
 							</div>
 							<div class="header-subtitle">
-								Somos una organización estratégica, compuesta de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento local y gloal llegue a manos de quienes lo necesitan.
+								Somos una organización estratégica, compuesta de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento local y global llegue a manos de quienes lo necesitan.
 							</div>
 							<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Descubre YA qué podemos hacer por tí</a>
 						</div>
@@ -106,7 +106,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="container margin-8 mb-8 mt-8">
+		<section class="container margin-8 mb-8 mt-8" style="padding-top: 10rem;">
 			<div class="row">
 				<div class="col-sm-3 text-center pb-5">
 					<img class="thinker m-auto" src="static/img/thinker_1.jpg" alt="">
@@ -158,7 +158,7 @@
 			<div class="m-8 mb-5">
 				<div class="section-title"
 					style="opacity: 0.8; font-weight: 400;">
-					¿Cómo Funciona?
+					¿Cómo funciona?
 				</div>
 				<a href="/modelo_integracion.html">— Conoce más</a>
 			</div>
@@ -272,7 +272,7 @@
 			<div class="santy mt-5 mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img class="mb-5" src="static/img/santy.jpeg" alt="">
+						<img class="mb-5" src="static/img/santy.jpg" alt="">
 					</div>
 					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
 						<div class="content-text mb-4">
