--- a/manifiesto.html
+++ b/manifiesto.html
@@ -42,16 +42,13 @@
 	<header style="height: 20vh !important;"></header>
 	<main class="container" style="max-width: 900px;">
 		<section class="manifesto mb-5">
-			<div class="w-100 text-right mb-5">
-				<img src="static/img/rocket_man.svg" style="width: 20%;">
+			<div class="text-center w-100" style="font-size: 1.5rem; margin-bottom: 2rem; letter-spacing: 5px;">
+				Una carta desde Cpi3nsa
 			</div>
-			<div class="section-title text-center mb-5" style="font-size: 2rem;">
-				Un propósito más grande que nosotros. 
+			<div class="section-title text-center mb-5" style="font-size: 2rem; background-color: #efefef; padding: 2rem 0;">
+				"Un propósito más grande que nosotros"
 			</div>
 			<div class="content-body text-justify">
-				En Cpi3nsa creemos en algo más grande que nosotros como individuos.
-				<br>
-				<br>
 				El mundo cambió. ¿Y tú?
 				<br>
 				<br>
@@ -76,15 +73,18 @@
 				En nombre de una evolución consciente, 
 				<br>
 				¿Qué dices si hacemos que esto suceda?
+				<div class="w-100 text-left mt-2" style="font-size: 0.9rem;">
+					<a href="static/docs/cpi3nsa_doc.html">
+						MÁS ACERCA DE CPI3NSA
+					</a>
+				</div>
 				<br>
 				<br>
 				<strong>Cpi3nsa</strong>
 				<br>
 				<br>
-				<div class="w-100 text-left mt-2" style="font-size: 0.9rem;">
-					<a href="static/docs/cpi3nsa_doc.html">
-						MÁS ACERCA DE CPI3NSA
-					</a>
+				<div class="w-100 text-right mb-5">
+					<img src="static/img/rocket_man.svg" style="width: 20%;">
 				</div>
 				<div class="mt-5" style="font-size: 0.7rem; opacity: 0.8;">
 					La organización Cpi3nsa es una entidad sin ánimo de lucro. Los aportes de los corporados, así como las donaciones de miembros, asociados y afiliados contribuyen al sostenimiento de la organización y sus proyectos. El 1% de los ingresos son destinados a causas ambientales y educación sensorial tales como: la reforestación, prácticas conservativas, y cápsulas de conocimiento y educación para niños.
