--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								¡Pensamos por tí!
 							</div>
 							<div class="header-subtitle">
-								Somos una organización estratégica, compuesta de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento local y global llegue a manos de quienes lo necesitan.
+								Somos una organización estratégica, compuesta de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento global y local llegue a manos de quienes lo necesitan.
 							</div>
 							<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Descubre YA qué podemos hacer por tí</a>
 						</div>
@@ -222,6 +222,41 @@
 							</div>
 						</a>
 					</div>
+				</div>
+			</div>
+		</section>
+		<hr>
+		<section class="container mt-8" style="padding-top: 2rem;">
+			<div class="content-title text-center"
+				style="opacity: 0.8; font-weight: 400;">
+				Otros Aliados
+			</div>
+			<div class="row no-mobile">
+				<div class="col-sm-3 m-auto text-right pb-5">
+					<img class="intern-logos" src="static/img/logo_imovi.jpg">
+				</div>
+				<div class="col-sm-3 m-auto text-right pb-5">
+					<img class="intern-logos" src="static/img/logo_kaptar.jpg">
+				</div>
+				<div class="col-sm-3 m-auto text-center pb-5">
+					<img class="intern-logos" style="width: 100px;" src="static/img/logo-Tesla.png">
+				</div>
+				<div class="col-sm-3 m-auto text-left pb-5">
+					<img class="intern-logos" src="static/img/logo_fakts.png">
+				</div>
+			</div>
+			<div class="row mobile">
+				<div class="col-sm-3 m-auto text-center pb-5">
+					<img class="intern-logos" style="width: 100px;" src="static/img/logo-Tesla.png">
+				</div>
+				<div class="col-sm-3 m-auto text-center pb-5">
+					<img class="intern-logos" src="static/img/logo_imovi.jpg">
+				</div>
+				<div class="col-sm-3 m-auto text-center pb-5">
+					<img class="intern-logos" src="static/img/logo_kaptar.jpg">
+				</div>
+				<div class="col-sm-3 m-auto text-center pb-5">
+					<img class="intern-logos" src="static/img/logo_fakts.png">
 				</div>
 			</div>
 		</section>
