--- a/manifiesto.html
+++ b/manifiesto.html
@@ -42,11 +42,12 @@
 	<header style="height: 20vh !important;"></header>
 	<main class="container" style="max-width: 900px;">
 		<section class="manifesto mb-5">
-			<div class="text-center w-100" style="font-size: 1.5rem; margin-bottom: 2rem; letter-spacing: 5px;">
-				Una carta desde Cpi3nsa
-			</div>
 			<div class="section-title text-center mb-5" style="font-size: 2rem; background-color: #efefef; padding: 2rem 0;">
-				"Un propósito más grande que nosotros"
+				<img height="40" src="static/img/quote-marks.png" alt="">
+				<br>
+				<div>
+					Un propósito más grande que nosotros.
+				</div>
 			</div>
 			<div class="content-body text-justify">
 				El mundo cambió. ¿Y tú?
@@ -60,29 +61,29 @@
 				</div>
 				<br>
 				<div class="w-100 text-center mb-0">
-					<strong class="text-center mb-0">Desde Cpi3nsa, todas nuestras acciones se basan en: lo ecológico, educativo y empresarial.</strong>
+					<strong class="text-center mb-0">Desde Cpi3nsa, todas nuestras acciones se basan en lo ecológico, educativo y empresarial.</strong>
 				</div>
 				<br>
 				<br>
-				Cpi3nsa trae innovación y desarrollo. Venimos transformando negocios, empresas y nuestro territorio colombiano hacia un futuro sostenible de prácticas conservativas y ecológicas, donde tenemos en cuenta el fundamento de llevar los negocios, tú negocio, hacia su máximo aprovechamiento y efectividad bajo el capitalismo consciente. Bajo nuestro modelo de integración y de la mano tuya, junto con los gobiernos y empresas, continuaremos llevando nuestros territorios hacia las super ciudades del futuro.
+				Cpi3nsa trae innovación y desarrollo. Venimos transformando empresas y el territorio colombiano hacia un futuro sostenible de prácticas conservativas y ecológicas, donde tenemos en cuenta el fundamento de llevar los negocios, tú negocio, hacia su máximo aprovechamiento y efectividad bajo el capitalismo consciente. Bajo nuestro modelo de integración y de la mano tuya, junto con los gobiernos y empresas, continuaremos llevando nuestros territorios hacia las super ciudades del futuro.
 				<br>
 				<br>
-				Juntos, queremos iniciar nuevas conversaciones. De tu mano, crearemos nuevos modelos y nuevas formas de pensar.  Con dedicación y compromiso,  vamos a desafiar el status quo acerca del pensamiento pobre de la región hoy. Hablándonos unos a otros, pasando el conocimiento a las siguientes generaciones, iremos poco a poco conquistando el pensamiento disruptivo. Será fundamental atrevernos a pensar, buscando romper cadenas y esclarecer el panorama, despertar. Solo así lograremos algun dia que las regiones de latinoamérica conquisten el miedo y logren cambios y propósitos genuinos.
+				Juntos, queremos iniciar nuevas conversaciones. De tu mano, crearemos nuevos modelos y nuevas formas de pensar.  Con dedicación y compromiso,  vamos a desafiar el status quo acerca del pensamiento pobre de la región hoy. Hablándonos unos a otros, pasando el conocimiento a las siguientes generaciones, iremos poco a poco conquistando el pensamiento disruptivo. ¡Será fundamental atrevernos a pensar, romper cadenas y despertar! Solo así lograremos algun dia que las regiones de latinoamérica conquisten el miedo y logren cambios y propósitos genuinos.
 				<br>
 				<br>
 				En nombre de una evolución consciente, 
 				<br>
 				¿Qué dices si hacemos que esto suceda?
-				<div class="w-100 text-left mt-2" style="font-size: 0.9rem;">
-					<a href="static/docs/cpi3nsa_doc.html">
-						MÁS ACERCA DE CPI3NSA
-					</a>
-				</div>
 				<br>
 				<br>
 				<strong>Cpi3nsa</strong>
 				<br>
 				<br>
+				<div class="w-100 text-left mt-2" style="font-size: 0.9rem;">
+					<a href="static/docs/cpi3nsa_doc.html">
+						MÁS ACERCA DE CPI3NSA
+					</a>
+				</div>
 				<div class="w-100 text-right mb-5">
 					<img src="static/img/rocket_man.svg" style="width: 20%;">
 				</div>
