--- a/proyectos.html
+++ b/proyectos.html
@@ -106,6 +106,21 @@
 					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">¡Quiero aportar a este proyecto!</a>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-lg-5">
+					<img class="mt-5" src="static/img/cpi3nsa_kids.jpg" alt="">
+				</div>
+				<div class="col-lg-7 m-auto">
+					<div class="content-title"
+						style="opacity: 0.5; font-weight: 400;">
+						Cpi3nsa Kids
+					</div>
+					<div class="content-body">
+						Documentales y micro cápsulas de conocimiento, intercambio de saberes y pedagogia ecologica de niños y para niños, basado en la educación sensorial.
+					</div>
+					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">¡Quiero aportar a este proyecto!</a>
+				</div>
+			</div>
 		</section>
 	</main>
 	<footer class="footer text-white pt-100 pb-100">
