--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="container margin-8 mb-8 mt-8" style="padding-top: 10rem;">
+		<section class="container margin-8 mb-8 mt-8">
 			<div class="row">
 				<div class="col-sm-3 text-center pb-5">
 					<img class="thinker m-auto" src="static/img/thinker_1.jpg" alt="">
@@ -239,7 +239,7 @@
 					<img class="intern-logos" src="static/img/logo_kaptar.jpg">
 				</div>
 				<div class="col-sm-3 m-auto text-center pb-5">
-					<img class="intern-logos" style="width: 100px;" src="static/img/logo-Tesla.png">
+					<img class="intern-logos" src="static/img/logo-Tesla.png">
 				</div>
 				<div class="col-sm-3 m-auto text-left pb-5">
 					<img class="intern-logos" src="static/img/logo_fakts.png">
