--- a/index.html
+++ b/index.html
@@ -265,12 +265,12 @@
 			<div class="armando mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img class="mb-5" src="static/img/headshot.jpg" alt="">
+						<img class="mb-3" src="static/img/headshot.jpg" alt="">
 					</div>
 					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
 						<div class="content-text mb-4">
 							<div class="font-italic">
-								"Unir ideas y crear modelos de negocio exitosos para mi equipo es lo que más disfruto y lo que mejor sé hacer. ¿Te interesa que cree un modelo de negocio contigo? Escríbeme!"
+								"Unir ideas y crear modelos de negocio exitosos para mi equipo es lo que más disfruto y lo que mejor sé hacer. ¿Quieres crear un modelo de negocio juntos? Escríbeme!"
 							</div>
 							<div>
 								<br>
@@ -286,7 +286,7 @@
 			<div class="sebas mt-5 mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img class="mb-5" src="static/img/headshot.jpg" alt="">
+						<img class="mb-3" src="static/img/headshot.jpg" alt="">
 					</div>
 					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
 						<div class="content-text mb-4">
@@ -307,7 +307,7 @@
 			<div class="santy mt-5 mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img class="mb-5" src="static/img/santy.jpg" alt="">
+						<img class="mb-3" src="static/img/santy.jpg" alt="">
 					</div>
 					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
 						<div class="content-text mb-4">
@@ -324,6 +324,9 @@
 						<a class="btn" style="padding: 0.7rem 2rem;" href="https://armando347776.typeform.com/to/FDwTlFKM">Únete al equipo de Santy!</a>
 					</div>
 				</div>
+			</div>
+			<div class="content-text mb-5 text-center" style="opacity: 0.6;">
+				El 1% de los ingresos son destinados a causas ambientales y educación sensorial tales como: la reforestación, prácticas conservativas, y cápsulas de conocimiento y educación para niños.
 			</div>
 		</section>
 		<hr>
@@ -386,12 +389,15 @@
 				</div>
 			</div>
 		</section>
-		<section style="background-color: #efefef;">
+		<section style="background-color: #fefefe;">
 			<div class="container text-center" style="padding: 8rem 2rem;">
-				<div class="section-title text-center" style="font-weight: 400;">
-					<a style="background-color: #2CCF96; color: #fff;" href="https://www.instagram.com/cpi3nsa/">CPI3NSA EN VIVO</a>
+				<div class="section-title text-center" style="font-size: 1.125rem; font-weight: 400;">
+					<img src="static/img/ig_live.png" height="90" alt="">
 					<br>
-					Conectate con nosotros todos los Lunes y Jueves a las 6pm en nuestro Cpi3nsa en VIVO impartiendo conocimiento.
+					<br>
+					<a style="font-size: 1.525rem; color: #007bff; font-weight: bold;" href="https://www.instagram.com/cpi3nsa/">CPI3NSA EN VIVO</a>
+					<br>
+					Conéctate con nosotros todos los Jueves a las 6pm en nuestro Cpi3nsa en VIVO.
 				</div>
 			</div>
 		</section>
