--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
 						<div class="content-text mb-4">
 							<div class="font-italic">
-								"¿Conoces el green marketing? Es lo máximo! Es lo último en tendencias y es lo que se viene ahora. Déjame ayudarte en este tema..."
+								"¿Conoces el green marketing? Es lo máximo! Es lo último en tendencias y lo que se viene ahora. Déjame ayudarte en este tema..."
 							</div>
 							<div>
 								<br>
