--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 				</div>
 			</div>
 			<div class="content-text mb-5 text-center" style="opacity: 0.6;">
-				El 1% de los ingresos son destinados a causas ambientales y educación sensorial tales como: la reforestación, prácticas conservativas, y cápsulas de conocimiento y educación para niños.
+				El 1% de los ingresos de la organización son destinados a causas ambientales y educación sensorial tales como: la reforestación, prácticas conservativas, y cápsulas de conocimiento y educación para niños.
 			</div>
 		</section>
 		<hr>
