Add slider intro

--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
     </div>
 	</header>
 	<main>
+		<div id="preLoader">
+			<div class="w-100 h-100 m-auto">
+				<div class="content-title text-center">
+					<img src="static/img/logo_sq_no_banner.png" alt="">
+					<br>
+					<br>
+					<span style="opacity: 0.8;">
+						#Cpi3nsaEnMovimiento
+					</span>
+				</div>
+			</div>
+		</div>
 		<section class="container mt-8 mb-8">
 			<div class="row no-mobile">
 				<div class="col-sm-4 m-auto text-right pb-5">
