--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div id="preLoader">
 			<div class="w-100 h-100 m-auto">
 				<div class="content-title text-center">
-					<img src="static/img/logo_sq_no_banner.png" alt="">
+					<img class="preloader-img" src="static/img/logo_sq_no_banner.png" alt="">
 					<br>
 					<br>
 					<span style="opacity: 0.8;">
@@ -73,9 +73,6 @@
 		</div>
 		<section class="container mt-8 mb-8">
 			<div class="row no-mobile">
-				<div class="col-sm-4 m-auto text-right pb-5">
-					<img class="intern-logos" style="width: 150px;" src="static/img/area_abur.png">
-				</div>
 				<div class="col-sm-4 m-auto text-center pb-5">
 					<img class="intern-logos" src="static/img/oea_logo.png">
 				</div>
@@ -93,6 +90,9 @@
 				<div class="col-sm-4 m-auto text-center pb-5">
 					<img class="intern-logos" src="static/img/onu.jpg">
 				</div>
+			</div>
+			<div class="content-text mb-5 text-center" style="opacity: 0.6;">
+				El 1% de los ingresos de la organización son destinados a causas ambientales y educación sensorial tales como: la reforestación, prácticas conservativas, y cápsulas de conocimiento para niños.
 			</div>
 		</section>
 		<section class="mt-8 mb-8 container">
@@ -330,15 +330,12 @@
 								<br>
 								Santiago Murillo
 								<br>
-								Director General
+								Director General de Cpi3nsa
 							</div>
 						</div>
 						<a class="btn" style="padding: 0.7rem 2rem;" href="https://armando347776.typeform.com/to/FDwTlFKM">Únete al equipo de Santy!</a>
 					</div>
 				</div>
-			</div>
-			<div class="content-text mb-5 text-center" style="opacity: 0.6;">
-				El 1% de los ingresos de la organización son destinados a causas ambientales y educación sensorial tales como: la reforestación, prácticas conservativas, y cápsulas de conocimiento y educación para niños.
 			</div>
 		</section>
 		<hr>
