--- a/index.html
+++ b/index.html
@@ -44,16 +44,17 @@
     	<div class="row">
     		<div class="col-lg">
 		      <div class="header-content fade-in">
-		        <div class="header-title">En el alma, en tu alma, se encuentran recursos para el mundo.</div>
+		        <div class="header-title">En el alma, en tu alma, se encuentran recursos para el mundo. <span style="font-size: 1rem; color: #222; opacity:0.7; font-weight: 400;">— RALPH WALDO EMERSON</span> </div>
 		        <div class="header-subtitle">
 					Hub creativo y red de cooperación.
 					<br>
 		        	Transformamos negocios y territorios hacia el futuro y la sostenibilidad.
-		    	</div>
+				</div>
+				<a class="btn" style="padding: 0.7rem 2rem;" href="static/docs/cpi3nsa_doc.html">Leer más</a>
 		      </div>
     		</div>
-    		<div class="col-lg no-mobile">
-    			<img src="static/img/plan.svg">
+    		<div class="col-lg no-mobile text-center">
+    			<img src="static/img/green_stars.svg">
     		</div>
 		</div>
     </div>
@@ -65,34 +66,42 @@
 					<img class="preloader-img" src="static/img/logo_sq_no_banner.png" alt="">
 					<br>
 					<br>
-					<span style="opacity: 0.8;">
+					<span style="opacity: 0.4;">
 						#Cpi3nsaEnMovimiento
 					</span>
 				</div>
 			</div>
 		</div>
-		<section class="container mt-8 mb-8">
+		<section style="margin-top: 2rem;" class="container mt-8 mb-8">
 			<div class="row no-mobile">
-				<div class="col-sm-4 m-auto text-center pb-5">
+				<div class="col-sm-3 m-auto text-right pb-5">
+					
+				</div>
+				<div class="col-sm-3 m-auto text-right pb-5">
 					<img class="intern-logos" src="static/img/oea_logo.png">
 				</div>
-				<div class="col-sm-4 m-auto text-left pb-5">
+				<div class="col-sm-3 m-auto text-left pb-5">
 					<img class="intern-logos" src="static/img/onu.jpg">
+				</div>
+				<div class="col-sm-3 m-auto text-right pb-5">
+					
 				</div>
 			</div>
 			<div class="row mobile">
 				<div class="col-sm-4 m-auto text-center pb-5">
-					<img class="intern-logos" style="width: 130px;" src="static/img/area_abur.png">
-				</div>
-				<div class="col-sm-4 m-auto text-center pb-5">
 					<img class="intern-logos" src="static/img/oea_logo.png">
 				</div>
 				<div class="col-sm-4 m-auto text-center pb-5">
 					<img class="intern-logos" src="static/img/onu.jpg">
 				</div>
 			</div>
-			<div class="content-text mb-5 text-center" style="opacity: 0.6;">
-				El 1% de los ingresos de la organización son destinados a causas ambientales y educación sensorial tales como: la reforestación, prácticas conservativas, y cápsulas de conocimiento para niños.
+			<div class="content-text mb-5 text-center">
+				<span style="opacity: 0.6;">
+					El 1% de los ingresos de la organización son destinados a causas ambientales y educación sensorial tales como: la reforestación, prácticas conservativas, y cápsulas de conocimiento para niños.
+				</span>
+				<br>
+				<br>
+				<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Quiero donar a estas causas</a>
 			</div>
 		</section>
 		<section class="mt-8 mb-8 container">
@@ -107,10 +116,10 @@
 						<div class="header-content fade-in ml-4">
 							<div class="content-title"
 								style="opacity: 0.8; font-weight: 400;">
-								¡Pensamos por tí!
+								¡Pensamos contigo!
 							</div>
 							<div class="header-subtitle">
-								Somos una organización estratégica, compuesta de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento global y local llegue a manos de quienes lo necesitan.
+								Nuestro tanque de pensamiento está compuesto de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento global y local llegue a manos tuyas y de quienes lo necesitan.
 							</div>
 							<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Descubre YA qué podemos hacer por tí</a>
 						</div>
@@ -238,37 +247,35 @@
 			</div>
 		</section>
 		<hr>
-		<section class="container mt-8" style="padding-top: 2rem;">
-			<div class="content-title text-center"
-				style="opacity: 0.8; font-weight: 400;">
-				Otros Aliados
-			</div>
-			<div class="row no-mobile">
-				<div class="col-sm-3 m-auto text-right pb-5">
-					<img class="intern-logos" src="static/img/logo_imovi.jpg">
+		<section class="mt-8" style="padding-top: 2rem">
+			<div class="container">
+				<div class="row no-mobile">
+					<div class="col-sm-3 m-auto text-right pb-5">
+						<img class="intern-logos" src="static/img/logo_imovi.jpg">
+					</div>
+					<div class="col-sm-3 m-auto text-right pb-5">
+						<img class="intern-logos" src="static/img/logo_kaptar.jpg">
+					</div>
+					<div class="col-sm-3 m-auto text-center pb-5">
+						<img class="intern-logos" src="static/img/logo-Tesla.png">
+					</div>
+					<div class="col-sm-3 m-auto text-left pb-5">
+						<img class="intern-logos" src="static/img/logo_fakts.png">
+					</div>
 				</div>
-				<div class="col-sm-3 m-auto text-right pb-5">
-					<img class="intern-logos" src="static/img/logo_kaptar.jpg">
-				</div>
-				<div class="col-sm-3 m-auto text-center pb-5">
-					<img class="intern-logos" src="static/img/logo-Tesla.png">
-				</div>
-				<div class="col-sm-3 m-auto text-left pb-5">
-					<img class="intern-logos" src="static/img/logo_fakts.png">
-				</div>
-			</div>
-			<div class="row mobile">
-				<div class="col-sm-3 m-auto text-center pb-5">
-					<img class="intern-logos" style="width: 100px;" src="static/img/logo-Tesla.png">
-				</div>
-				<div class="col-sm-3 m-auto text-center pb-5">
-					<img class="intern-logos" src="static/img/logo_imovi.jpg">
-				</div>
-				<div class="col-sm-3 m-auto text-center pb-5">
-					<img class="intern-logos" src="static/img/logo_kaptar.jpg">
-				</div>
-				<div class="col-sm-3 m-auto text-center pb-5">
-					<img class="intern-logos" src="static/img/logo_fakts.png">
+				<div class="row mobile">
+					<div class="col-sm-3 m-auto text-center pb-5">
+						<img class="intern-logos" style="width: 100px;" src="static/img/logo-Tesla.png">
+					</div>
+					<div class="col-sm-3 m-auto text-center pb-5">
+						<img class="intern-logos" src="static/img/logo_imovi.jpg">
+					</div>
+					<div class="col-sm-3 m-auto text-center pb-5">
+						<img class="intern-logos" src="static/img/logo_kaptar.jpg">
+					</div>
+					<div class="col-sm-3 m-auto text-center pb-5">
+						<img class="intern-logos" src="static/img/logo_fakts.png">
+					</div>
 				</div>
 			</div>
 		</section>
@@ -277,7 +284,7 @@
 			<div class="armando mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img class="mb-3" src="static/img/headshot.jpg" alt="">
+						<img class="mb-3" src="static/img/ac_pic.jpg" alt="">
 					</div>
 					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
 						<div class="content-text mb-4">
@@ -298,12 +305,14 @@
 			<div class="sebas mt-5 mb-5">
 				<div class="row mt-5">
 					<div class="col-sm-3">
-						<img class="mb-3" src="static/img/headshot.jpg" alt="">
+						<img class="mb-3" src="static/img/sebas_gil.jpeg" alt="">
 					</div>
 					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
 						<div class="content-text mb-4">
 							<div class="font-italic">
-								"¿Conoces el green marketing? Es lo máximo! Es lo último en tendencias y lo que se viene ahora. Déjame ayudarte en este tema..."
+								"No debemos ser ruidosos, pero si relevantes. Enfocándonos siempre en generar transacción. ¡El Green Marketing es la mejor forma de hacerlo!.
+								<br>
+								Déjame ayudarte en este tema…"
 							</div>
 							<div>
 								<br>
