--- a/soluciones.html
+++ b/soluciones.html
@@ -76,7 +76,7 @@
 			<hr>
 			<div class="row mt-5">
 				<div class="col-lg-5 m-auto">
-					<img src="static/img/darwin.jpeg" alt="">
+					<img src="static/img/darwin.png" alt="">
 				</div>
 				<div class="col-lg-7 m-auto">
 					<div class="content-title mb-0"
@@ -101,7 +101,7 @@
 			</div>
 			<div class="row mt-5">
 				<div class="col-lg-5 m-auto">
-					<img style="filter: grayscale(1)" src="static/img/davinci.jpeg" alt="">
+					<img style="filter: grayscale(1)" src="static/img/davinci.png" alt="">
 				</div>
 				<div class="col-lg-7 m-auto">
 					<div class="content-title mb-0"
@@ -128,7 +128,7 @@
 			</div>
 			<div class="row mt-5">
 				<div class="col-lg-5 m-auto">
-					<img src="static/img/einstein.jpeg" alt="">
+					<img src="static/img/einsetin.png" alt="">
 				</div>
 				<div class="col-lg-7 m-auto">
 					<div class="content-title mb-0"
@@ -151,7 +151,7 @@
 			</div>
 			<div class="row mt-5">
 				<div class="col-lg-5 m-auto">
-					<img style="filter: grayscale(1);" src="static/img/tesla.jpeg" alt="">
+					<img style="filter: grayscale(1);" src="static/img/tesla.png" alt="">
 				</div>
 				<div class="col-lg-7 m-auto">
 					<div class="content-title mb-0"
