--- a/manifiesto.html
+++ b/manifiesto.html
@@ -15,7 +15,7 @@
 <body>
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
 		<div class="container">
-		    <a class="navbar-brand" href="#">
+		    <a class="navbar-brand" href="/">
 		    	<img src="static/img/name_logo_white.png">
 		    </a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
 				<br>
 				<br>
 				<div class="w-100 text-left mt-2" style="font-size: 0.9rem;">
-					<a href="static/docs/cpi3nsa_doc.html">
+					<a href="static/docs/cpi3nsa_doc.pdf">
 						MÁS ACERCA DE CPI3NSA
 					</a>
 				</div>
@@ -113,7 +113,7 @@
 			</div>
 			<div class="col-md-4 footer-content text-center" style="font-size: 10px; text-transform: uppercase;">
 			  <div class="m-auto">
-				<a href="static/docs/cpi3nsa_doc.html">acerca de cpi3nsa</a>&nbsp; | &nbsp;
+				<a href="static/docs/cpi3nsa_doc.pdf">acerca de cpi3nsa</a>&nbsp; | &nbsp;
 				<!--<a href="#">online store</a> &nbsp;-->
 				<a href="/proyectos.html"> proyectos</a>&nbsp; | &nbsp;
 				<a href="/static/docs/privacy_policy.pdf"> política de privacidad</a>
