--- a/tienda.html
+++ b/tienda.html
@@ -15,7 +15,7 @@
 <body>
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
 		<div class="container">
-		    <a class="navbar-brand" href="#">
+		    <a class="navbar-brand" href="/">
 		    	<img src="static/img/name_logo_white.png">
 		    </a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,17 +39,17 @@
 		    </div>
 		</div>
 	</nav>
-	<header>
-    <div class="header-caption container">
-    	<div class="row">
-    		<div class="col-lg text-center">
-            <div class="col-lg mb-5">
-                <img src="static/img/logo_sq_no_banner.png" width="400">
-            </div>
-            <div class="header-title text-center w-100">Proximamente...</div>
-            </div>
-    	</div>
-    </div>
+	<header style="background-color: #fff;">
+		<div class="header-caption container">
+			<div class="row">
+				<div class="col-lg text-center">
+				<div class="col-lg mb-5">
+					<img src="static/img/logo_sq_no_banner.png" width="400">
+				</div>
+				<div class="header-title text-center w-100">Proximamente...</div>
+				</div>
+			</div>
+		</div>
 	</header>
 	<main>
 	</main>
@@ -73,7 +73,7 @@
 			</div>
 			<div class="col-md-4 footer-content text-center" style="font-size: 10px; text-transform: uppercase;">
 			  <div class="m-auto">
-				<a href="static/docs/cpi3nsa_doc.html">acerca de cpi3nsa</a>&nbsp; | &nbsp;
+				<a href="static/docs/cpi3nsa_doc.pdf">acerca de cpi3nsa</a>&nbsp; | &nbsp;
 				<!--<a href="#">online store</a> &nbsp;-->
 				<a href="/proyectos.html"> proyectos</a>&nbsp; | &nbsp;
 				<a href="/static/docs/privacy_policy.pdf"> política de privacidad</a>
