--- a/soluciones.html
+++ b/soluciones.html
@@ -175,15 +175,18 @@
 				</div>
 			</div>
 		</section>
-	</main>
-	<section style="background-color: #efefef;">
-		<div class="container text-center" style="padding: 8rem 2rem;">
-			<div class="section-title text-left" style="font-weight: 400;">
-				Hola! Soy Abi, necesitas ayuda para tomar una buena decisión?
-				<a style="background-color: #2CCF96; color: #fff; text-decoration: underline;" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Escríbeme para asistirte!</a>
+		<hr>
+		<section style="background-color: #fefefe;">
+			<div class="container text-center" style="padding: 8rem 2rem;">
+				<div class="section-title text-center" style="font-size: 1.125rem; font-weight: 400; font-style: italic;">
+					Hola! Soy Abi, necesitas ayuda para tomar una buena decisión?
+					<br>
+					<br>
+					<a style="font-size: 1.525rem; color: #007bff; font-weight: bold;" href="https://www.instagram.com/cpi3nsa/">Escríbeme para asistirte!</a>
+				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+	</main>
 	<footer class="footer text-white pt-100 pb-100">
 		<div class="mr-5 ml-5">
 		  <div class="row">
