--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<br>
 		        	Transformamos negocios y territorios hacia el futuro y la sostenibilidad.
 				</div>
-				<a class="btn" style="padding: 0.7rem 2rem;" href="static/docs/cpi3nsa_doc.pdf">Leer más</a>
+				<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Descubre YA qué podemos hacer por tí</a>
 		      </div>
     		</div>
     		<div class="col-lg no-mobile text-center">
@@ -74,16 +74,13 @@
 		</div>
 		<section style="margin-top: 2rem;" class="container mt-8 mb-8">
 			<div class="row no-mobile">
-				<div class="col-sm-3 m-auto text-right pb-5">
+				<div class="col-sm-4 m-auto text-right pb-5">
 					
 				</div>
-				<div class="col-sm-3 m-auto text-right pb-5">
-					<img class="intern-logos" src="static/img/oea_logo.png">
-				</div>
-				<div class="col-sm-3 m-auto text-left pb-5">
+				<div class="col-sm-4 m-auto text-center pb-5">
 					<img class="intern-logos" src="static/img/onu.jpg">
 				</div>
-				<div class="col-sm-3 m-auto text-right pb-5">
+				<div class="col-sm-4 m-auto text-right pb-5">
 					
 				</div>
 			</div>
@@ -121,7 +118,7 @@
 							<div class="header-subtitle">
 								Nuestro tanque de pensamiento está compuesto de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento global y local llegue a manos tuyas y de quienes lo necesitan.
 							</div>
-							<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Descubre YA qué podemos hacer por tí</a>
+							<a class="btn" style="padding: 0.7rem 2rem;" href="static/docs/cpi3nsa_doc.pdf">Leer más</a>
 						</div>
 					</div>
 				</div>
@@ -148,7 +145,7 @@
 					<div class="about-card-text">
 						Coordinador del Clúster de Conocimiento en Tecnologías de la Información y de la Comunicación.
 						<br>
-						Madrid
+						Bilbao
 					</div>
 				</div>
 				<div class="col-sm-3 text-center pb-5">
@@ -159,7 +156,7 @@
 					<div class="about-card-text">
 						Administradora Pública por la Fundação Getulio Vargas/FGV.
 						<br>
-						Rio de Janeiro
+						Sao Paulo
 					</div>
 				</div>
 				<div class="col-sm-3 text-center pb-5">
