--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 		      <div class="header-content fade-in">
 		        <div class="header-title">En el alma, en tu alma, se encuentran recursos para el mundo. <span style="font-size: 1rem; color: #222; opacity:0.7; font-weight: 400;">— RALPH WALDO EMERSON</span> </div>
 		        <div class="header-subtitle">
-					Hub creativo y red de cooperación.
+					Tanque de pensamiento y HUB creativo.
 					<br>
-		        	Transformamos negocios y territorios hacia el futuro y la sostenibilidad.
+					Transformamos negocios, gobiernos y territorios hacia el futuro y la sostenibilidad
 				</div>
-				<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Descubre YA qué podemos hacer por tí</a>
+				<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Explora a Cpi3nsa</a>
 		      </div>
     		</div>
     		<div class="col-lg no-mobile text-center">
@@ -84,17 +84,14 @@
 					
 				</div>
 			</div>
-			<div class="row mobile">
-				<div class="col-sm-4 m-auto text-center pb-5">
-					<img class="intern-logos" src="static/img/oea_logo.png">
-				</div>
+			<div class="row mobile" style="margin-bottom: 1rem !important;">
 				<div class="col-sm-4 m-auto text-center pb-5">
 					<img class="intern-logos" src="static/img/onu.jpg">
 				</div>
 			</div>
 			<div class="content-text mb-5 text-center">
 				<span style="opacity: 0.6;">
-					El 1% de los ingresos de la organización son destinados a causas ambientales y educación sensorial tales como: la reforestación, prácticas conservativas, y cápsulas de conocimiento para niños.
+					El 1% de los ingresos de la organización son destinados a causas ambientales, educación sensorial y reivindicación de la mujer en la sociedad tales como: Reforestación, cápsulas de conocimiento para niñ@s y lucha contra el cancer de mama en Colombia
 				</span>
 				<br>
 				<br>
@@ -105,7 +102,7 @@
 			<div class="header-caption">
 				<div class="row">
 					<div class="col-lg-6 pl-5 pr-5">
-						<video controls style="width: 100%;">
+						<video controls poster="static/img/video_poster.png" style="width: 100%;">
 							<source src="static/img/what_are_think_tank.mp4" type="video/mp4">
 						</video>
 					</div>
@@ -118,7 +115,7 @@
 							<div class="header-subtitle">
 								Nuestro tanque de pensamiento está compuesto de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento global y local llegue a manos tuyas y de quienes lo necesitan.
 							</div>
-							<a class="btn" style="padding: 0.7rem 2rem;" href="static/docs/cpi3nsa_doc.pdf">Leer más</a>
+							<a class="btn" style="padding: 0.7rem 2rem;" href="static/docs/cpi3nsa_doc.pdf">Descubre YA que podemos hacer por ti</a>
 						</div>
 					</div>
 				</div>
