--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@
 			</div>
 			<div class="content-text mb-5 text-center">
 				<span style="opacity: 0.6;">
-					El 1% de los ingresos de la organización son destinados a causas ambientales, educación sensorial y reivindicación de la mujer en la sociedad tales como: Reforestación, cápsulas de conocimiento para niñ@s y lucha contra el cancer de mama en Colombia
+					En 2020 la Convención de las Naciones Unidas para Combatir la Desertificación y la Pobreza (UNCCD) reconoció a nuestra marca Medegreen2030 (en bold) como una de las cinco marcas ciudad más influyentes y constructivas de América Latina y el Caribe, contando con el aval y la certificación de la ONU (en bold) como aliado estratégico en todas las operaciones.
+				</span>
+			</div>
+		</section>
+		<section style="margin-top: 2rem;" class="container mt-8 mb-8">
+			<div class="content-text mb-5 text-center">
+				<span style="opacity: 0.6;">
+					El 1% de los ingresos de la organización son destinados a causas ambientales, educación sensorial y reivindicación de la mujer en la sociedad tales como: Reforestación, cápsulas de conocimiento para niñ@s y lucha contra el cancer de mama en Colombia.
 				</span>
 				<br>
 				<br>
@@ -257,7 +264,7 @@
 						<img class="intern-logos" src="static/img/logo_fakts.png">
 					</div>
 				</div>
-				<div class="row mobile">
+				<div style="margin: 5rem auto !important;" class="row mobile">
 					<div class="col-sm-3 m-auto text-center pb-5">
 						<img class="intern-logos" style="width: 100px;" src="static/img/logo-Tesla.png">
 					</div>
