--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 	<header>
     <div class="header-caption container">
     	<div class="row">
+			<div style="margin-bottom: 0 !important; margin-top: 5rem !important;" class="col-lg mobile text-center mb-0">
+    			<img src="static/img/green_stars.svg">
+    		</div>
     		<div class="col-lg">
 		      <div class="header-content fade-in">
 		        <div class="header-title">En el alma, en tu alma, se encuentran recursos para el mundo. <span style="font-size: 1rem; color: #222; opacity:0.7; font-weight: 400;">— RALPH WALDO EMERSON</span> </div>
